twitterのシェアボタンを作成した

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <button class="scissors">scissors</button>
       </div>
     </div>
+    <div class="tweet"><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-lang="en" data-show-count="false">Tweet</a></div>
   </section>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="app.js"></script>
 </body>
 
