LINEシェアボタンを追加しました

--- a/index.html
+++ b/index.html
@@ -40,12 +40,19 @@
         <button class="scissors">scissors</button>
       </div>
     </div>
-    <div class="tweet"><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-lang="en" data-show-count="false">Tweet</a></div>
+
+    <div class="tweet">
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-lang="en" data-show-count="false">Tweet</a>
+    </div>
+
+    <div class="line-share-button">
+      <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL" data-url="http://file:///Users/jo/moggithon2022-2-2C/index.html" data-color="default" data-size="large" data-count="false" data-ver="3" style="display: none;"></div>
+    </div>
+    
   </section>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer" ></script>
   <script src="app.js"></script>
 </body>
-
-
 
 </html>
